tests/rosetta/out/Fortran/bitmap-histogram.error
gfortran: exit status 1
/tmp/bitmap-histogram.f90:53:9:

   53 |         p = row(((x)+1))
      |         1
Error: Unclassifiable statement at (1)
/tmp/bitmap-histogram.f90:91:17:

   91 |         if ((row(((x)+1)) < t)) then
      |                 1
Error: Expected a right parenthesis in expression at (1)
/tmp/bitmap-histogram.f90:97:12:

   97 |         else
      |            1
Error: Unexpected ELSE statement at (1)
/tmp/bitmap-histogram.f90:103:11:

  103 |         end if
      |           1
Error: Expecting END DO statement at (1)
/tmp/bitmap-histogram.f90:124:17:

  124 |         if ((row(((x)+1)) == 0)) then
      |                 1
Error: Expected a right parenthesis in expression at (1)
/tmp/bitmap-histogram.f90:126:12:

  126 |         else
      |            1
Error: Unexpected ELSE statement at (1)
/tmp/bitmap-histogram.f90:128:11:

  128 |         end if
      |           1
Error: Expecting END DO statement at (1)
/tmp/bitmap-histogram.f90:140:5:

  140 |     t = medianThreshold(h)
      |     1
Error: Symbol ‘t’ at (1) has no IMPLICIT type
/tmp/bitmap-histogram.f90:116:35:

  116 |   recursive subroutine printImage(g)
      |                                   1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘g’ at (1)
/tmp/bitmap-histogram.f90:81:40:

   81 |   recursive integer function threshold(g,t) result(res)
      |                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘g’ at (1)
/tmp/bitmap-histogram.f90:63:46:

   63 |   recursive integer function medianThreshold(h) result(res)
      |                                              1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘h’ at (1)
/tmp/bitmap-histogram.f90:32:40:

   32 |   recursive integer function histogram(g,bins) result(res)
      |                                        1
Error: PROCEDURE attribute conflicts with INTENT attribute in ‘g’ at (1)
/tmp/bitmap-histogram.f90:29:4:

   29 |     res = (/(/0,0,10000/),(/65535,65535,65535/),(/65535,65535,65535/)/)
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/bitmap-histogram.f90:137:18:

  137 |     h = histogram(img,0)
      |                  1
Error: Expected a procedure for argument ‘g’ at (1)
/tmp/bitmap-histogram.f90:36:18:

   36 |       bins = size(g(((0)+1)))
      |                  1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:52:26:

   52 |       do while ((x < size(row)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:49:24:

   49 |     do while ((y < size(g)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:60:4:

   60 |     res = h
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/bitmap-histogram.f90:140:24:

  140 |     t = medianThreshold(h)
      |                        1
Error: Rank mismatch in argument ‘h’ at (1) (scalar and rank-1)
/tmp/bitmap-histogram.f90:66:15:

   66 |     ub = (size(h) - 1)
      |               1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:70:11:

   70 |       if ((((lSum + h(((lb)+1))) < uSum) + h(((ub)+1)))) then
      |           1
Error: Operands of binary numeric operator ‘+’ at (1) are LOGICAL(4)/INTEGER(4)
/tmp/bitmap-histogram.f90:78:38:

   78 |     res = int(((((ub * 65535)) / size(h))))
      |                                      1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:144:20:

  144 |     call printImage(bw)
      |                    1
Error: Expected a procedure for argument ‘g’ at (1)
/tmp/bitmap-histogram.f90:123:26:

  123 |       do while ((x < size(row)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:119:24:

  119 |     do while ((y < size(g)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:90:26:

   90 |       do while ((x < size(row)))
      |                          1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:109:6:

  109 |       app3(size(out)+1) = newRow
      |      1
Error: Incompatible ranks 0 and 1 in assignment at (1)
/tmp/bitmap-histogram.f90:86:24:

   86 |     do while ((y < size(g)))
      |                        1
Error: ‘array’ argument of ‘size’ intrinsic at (1) must be an array
/tmp/bitmap-histogram.f90:113:4:

  113 |     res = out
      |    1
Error: Incompatible ranks 0 and 1 in assignment at (1)
