tests/rosetta/out/Fortran/bitmap-histogram.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program bitmap_histogram
  implicit none
    integer, allocatable, dimension(:) :: h
    integer :: i
      integer, allocatable, dimension(:) :: app0
    integer :: y
      integer :: row
      integer :: x
        integer :: p
        integer :: idx
    integer :: lb
    integer :: ub
    integer :: lSum
    integer :: uSum
    integer, allocatable, dimension(:) :: out
      integer, allocatable, dimension(:) :: newRow
          integer, allocatable, dimension(:) :: app1
          integer, allocatable, dimension(:) :: app2
      integer, allocatable, dimension(:) :: app3
      character(len=100) :: line
    integer :: img
    character(len=100) :: s4
    character(len=100) :: s5
    integer :: bw
  call main()
  contains
  recursive integer function image() result(res)
    res = (/(/0,0,10000/),(/65535,65535,65535/),(/65535,65535,65535/)/)
    return
  end function image
  recursive integer function histogram(g,bins) result(res)
    integer, intent(in) :: g
    integer, intent(in) :: bins
    if ((bins <= 0)) then
      bins = size(g(((0)+1)))
    end if
    allocate(h(0))
    i = 0
    do while ((i < bins))
      if (allocated(app0)) deallocate(app0)
      allocate(app0(size(h)+1))
      app0(1:size(h)) = h
      app0(size(h)+1) = 0
      h = app0
      i = (i + 1)
    end do
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      x = 0
      do while ((x < size(row)))
        p = row(((x)+1))
        idx = int(((((p * ((bins - 1)))) / 65535)))
        h(((idx)+1)) = (h(((idx)+1)) + 1)
        x = (x + 1)
      end do
      y = (y + 1)
    end do
    res = h
    return
  end function histogram
  recursive integer function medianThreshold(h) result(res)
    integer, intent(in) :: h
    lb = 0
    ub = (size(h) - 1)
    lSum = 0
    uSum = 0
    do while ((lb <= ub))
      if ((((lSum + h(((lb)+1))) < uSum) + h(((ub)+1)))) then
        lSum = (lSum + h(((lb)+1)))
        lb = (lb + 1)
      else
        uSum = (uSum + h(((ub)+1)))
        ub = (ub - 1)
      end if
    end do
    res = int(((((ub * 65535)) / size(h))))
    return
  end function medianThreshold
  recursive integer function threshold(g,t) result(res)
    integer, intent(in) :: g
    integer, intent(in) :: t
    allocate(out(0))
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      allocate(newRow(0))
      x = 0
      do while ((x < size(row)))
        if ((row(((x)+1)) < t)) then
          if (allocated(app1)) deallocate(app1)
          allocate(app1(size(newRow)+1))
          app1(1:size(newRow)) = newRow
          app1(size(newRow)+1) = 0
          newRow = app1
        else
          if (allocated(app2)) deallocate(app2)
          allocate(app2(size(newRow)+1))
          app2(1:size(newRow)) = newRow
          app2(size(newRow)+1) = 65535
          newRow = app2
        end if
        x = (x + 1)
      end do
      if (allocated(app3)) deallocate(app3)
      allocate(app3(size(out)+1))
      app3(1:size(out)) = out
      app3(size(out)+1) = newRow
      out = app3
      y = (y + 1)
    end do
    res = out
    return
  end function threshold
  recursive subroutine printImage(g)
    integer, intent(in) :: g
    y = 0
    do while ((y < size(g)))
      row = g(((y)+1))
      line = ''
      x = 0
      do while ((x < size(row)))
        if ((row(((x)+1)) == 0)) then
          line = line // '0'
        else
          line = line // '1'
        end if
        x = (x + 1)
      end do
      print *, line
      y = (y + 1)
    end do
  end subroutine printImage
  recursive subroutine main()
    img = image()
    h = histogram(img,0)
    write(s4,'(G0)') h
    print *, 'Histogram: ' // s4
    t = medianThreshold(h)
    write(s5,'(G0)') t
    print *, 'Threshold: ' // s5
    bw = threshold(img,t)
    call printImage(bw)
  end subroutine main
end program bitmap_histogram
